[gd_scene load_steps=5 format=3 uid="uid://b4jrciuu56lus"]

[ext_resource type="Script" uid="uid://dibfccv3ceepc" path="res://scripts/Target.gd" id="1_ligy1"]
[ext_resource type="PackedScene" uid="uid://daisyh88gqg4c" path="res://assets/player_character.blend" id="2_3xmu0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ligy1"]
size = Vector3(0.692426, 0.333549, 0.562866)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3xmu0"]
radius = 0.136283
height = 1.66369

[node name="Target" type="CharacterBody3D"]
script = ExtResource("1_ligy1")

[node name="Model" parent="." instance=ExtResource("2_3xmu0")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)

[node name="HeadAttachment" type="BoneAttachment3D" parent="."]

[node name="GunAttachment" type="BoneAttachment3D" parent="."]

[node name="GunMount" type="Node3D" parent="GunAttachment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 2.02473, -0.3)

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.2, 0)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionShapeTorso" type="CollisionShape3D" parent="."]
transform = Transform3D(0.721721, 0, 0, 0, 3.26001, 0, 0, 0, 0.316528, 0.00237752, 0.585455, 0.00353959)
shape = SubResource("BoxShape3D_ligy1")

[node name="CollisionShapeChest" type="CollisionShape3D" parent="."]
transform = Transform3D(0.721721, 0, 0, 0, 3.26001, 0, 0, 0, 0.316528, 0.0176489, 1.34966, 0.00353959)
shape = SubResource("BoxShape3D_ligy1")

[node name="CollisionShape3DHead" type="CollisionShape3D" parent="."]
transform = Transform3D(0.721721, 0, 0, 0, 0.416066, 0, 0, 0, 0.316528, -0.00561354, 2.08774, 0.00353959)
shape = SubResource("CapsuleShape3D_3xmu0")
